--- a/templates/papers.html
+++ b/templates/papers.html
@@ -217,6 +217,15 @@
 {#              />#}
 {#              SC#}
 {#            </label>#}
+            <label class="btn btn-sm btn-outline-secondary" data-tippy-content="Awards"   style="width: 4em;">
+              <input
+                type="radio"
+                name="program"
+                value="Award"
+                autocomplete="off"
+              />
+              Award
+            </label>
             <label class="btn btn-sm btn-outline-secondary" style="width: 4em;">
               <input
                 type="radio"
