--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,11 @@
 
         <dt>AAAI-21/IAAI-21 Conference Pre-recorded Talks</dt>
         <dd>
-            Each AAAI-21 and IAAI-21 conference paper has a pre-recorded 20-minute talk, and an associated poster session. Pre-recorded talks for the following programs are also available: Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, the Classic Paper Award Talk, and the AAAI/ACM SIGAI Dissertation Award Talk. Live Q&A video sessions (Zoom/Gather.Town) will be available via the assigned poster session times, as well as a linked RocketChat channel (for chatting anytime with the author).
+            Each AAAI-21 conference paper has a pre-recorded 20-minute talk, a pre-recorded 1-minute introductory talk (for a summary of the paper), and an associated poster session.
+            <br>
+            Each IAAI-21 conference paper has a pre-recorded 20-minute talk, a pre-recorded 2-minute introductory talk (for a summary of the paper), and an associated poster session.
+            <br>
+            Pre-recorded talks for the following programs are also available: Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, the Classic Paper Award Talk, and the AAAI/ACM SIGAI Dissertation Award Talk. Live Q&A video sessions (Zoom/Gather.Town) will be available via the assigned poster session times, as well as a linked RocketChat channel (for chatting anytime with the author).
         </dd>
 
         <dt>EAAI-21 Symposium</dt>
@@ -222,7 +226,7 @@ The AAAI2021 infrastructure committee is very grateful to the volunteers and con
 We would also like to thank <a href="https://desilinguist.org/">Nitin Madnani</a> for his advice and IT
   support regarding the virtual infrastructure. We also want to thank
   AI2  for contributing the <a href="https://github.com/allenai/specter">SPECTER model</a>
-  used in the "Similar Papers" feature, David Wadden et al. for <a href="https://github.com/dwadden/dygiepp">DyGIE++</a>
+  used in the "Similar Papers" feature, and David Wadden et al. for <a href="https://github.com/dwadden/dygiepp">DyGIE++</a>
   that generated paper keywords for us.
 
 </p>
