--- a/templates/livestream.html
+++ b/templates/livestream.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 
-{% set livestream_id = '38942830' %}
+{% set livestream_id = '38951946' %}
 <!--{% set cart_url = "https://www.streamtext.net/player?event=UofEdin" %}-->
 
 <div id="live container">
@@ -43,9 +43,9 @@
             presentationId: {{ livestream_id }},
             autoPlay: false, // change to true to autoplay the embedded presentation
             verticalEnabled: true,
-            verticalWhenWidthLte: 500,
-            allowHiddenControlsWhenPaused: true,
-            hideTitle: true,
+{#            verticalWhenWidthLte: 500,#}
+{#            allowHiddenControlsWhenPaused: true,#}
+{#            hideTitle: true,#}
           });
         </script>
       </div>
