--- a/templates/awards.html
+++ b/templates/awards.html
@@ -21,7 +21,7 @@
   </div>
   
   <div class="col-md-12 col-sm-12 pr-5 lead">
-    <h2 style="margin-top: 30px"> Recipents </h2>
+    <h2 style="margin-top: 30px"> Recipients </h2>
 
     {% for award in awards %}
     
