link to livestream

--- a/templates/components.html
+++ b/templates/components.html
@@ -71,7 +71,7 @@
 {#              {% else %}#}
 {#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
 {#              {% endif %}#}
-                [<a href="livestream.html"   class="card-link">Join Livestream</a>]
+                [<a href="livestream.html"   class="card-link">Watch video</a>]
             </div>
             {% endfor %}
 
