--- a/templates/papers.html
+++ b/templates/papers.html
@@ -217,7 +217,7 @@
 {#              />#}
 {#              SC#}
 {#            </label>#}
-            <label class="btn btn-sm btn-outline-secondary" data-tippy-content="Awards"   style="width: 4.5em;">
+            <label class="btn btn-sm btn-outline-secondary" data-tippy-content="2021 AAAI Classic Paper Award and 2019 AAAI/ACM SIGAI Dissertation Award"   style="width: 4.5em;">
               <input
                 type="radio"
                 name="program"
