--- a/templates/index.html
+++ b/templates/index.html
@@ -83,10 +83,53 @@
 {#      #}
 {#      </dd>#}
         <dd>
-            Plenary Sessions include the Conference Welcome and Awards, Keynote and Invited Talks, Invited Panels, and special community events, such as the Organizational Awards Ceremony.
-            Some pre-recorded videos may be available for <a class="text" href="plenary_sessions.html" >Plenary Sessions</a>.
-
+            Plenary Sessions will be held February 4-7, and will include the Conference Welcome and Awards, Keynote and Invited Talks, Invited Panels, and special community events, such as the Organizational Awards Ceremony. Some pre-recorded videos may be available for <a class="text" href="plenary_sessions.html" >Plenary Sessions</a>. Plenary sessions are scheduled for the following times:
+            <li>7:30 - 8:45 AM PST</li>
+            <li>3:30 - 4:45 PM PST</li>
+            <li>11:30 - 00:45 AM PST</li>
         </dd>
+
+        <dt>Poster Sessions</dt>
+        <dd>
+            Conference-wide poster sessions will be held February 4-7, and will include posters from all programs listed below under Conference Papers (except EAAI-21). Poster sessions are scheduled for the following times:
+            <li>
+                8:45 - 10:30 AM PST
+            </li>
+            <li>
+                4:45 - 6:30 PM PST
+            </li>
+            <li>
+                00:45 - 2:30 AM PST
+            </li>
+            Authors are encouraged to be available during two sessions each day.
+        </dd>
+
+
+
+
+        <dt>Sponsors/Exhibitors/Job Fair</dt>
+        <dd>
+            AAAI is grateful to all of its sponsors for their support of all aspects of the conference program. Please visit our sponsors and exhibitor booths during the following times, February 4-7:
+            <li>
+                10:00 - 12:30 AM PST
+            </li>
+            <li>
+                6:00 - 8:30 PM PST
+            </li>
+            <li>
+                2:00 - 4:30 AM PST
+            </li>
+            Be sure to attend the AAAI/ACM SIGAI Job Fair on Saturday, February 6 during the following hours.
+            <li>10:30 - 12:30 AM PST</li>
+            <li>6:30 - 8:30 PM PST</li>
+            <li>2:30 - 4:30 AM PST</li>
+        </dd>
+
+        <dt>Tutorials and Workshops</dt>
+        <dd>
+            AAAI includes (25) <a class="text" href="tutorials.html">tutorials</a> on February 3 and (26) <a class="text" href="workshops.html">workshops</a> on February 8-9, which are open to all registered attendees. Most will be live sessions, accessible via the posted Zoom link.
+        </dd>
+
 
        <dt>Conference Papers</dt>
         <dd>
@@ -112,52 +155,18 @@
             The <a class="text" href="doctoral_consortium.html">Doctoral</a> and <a class="text" href="undergraduate_consortium.html">Undergraduate</a> Consortia will be conducted live via Zoom. All AAAI-21 registrants are welcome.
         </dd>
 
-        <dt>Tutorials and Workshops</dt>
-        <dd>
-            AAAI includes (25) <a class="text" href="tutorials.html">tutorials</a> on February 3 and (26) <a class="text" href="workshops.html">workshops</a> on February 8-9, which are open to all registered attendees. Most will be live sessions, accessible via the posted Zoom link.
-        </dd>
+
 
         <dt>Diversity Events</dt>
         <dd>
             AAAI features 11 Diversity and Inclusion events throughout the February 2-9 conference period. Most are open to conference registrants, and accessible via the posted Zoom link.
         </dd>
 
-        <dt>Poster Sessions</dt>
-        <dd>
-            Conference-wide poster sessions will be held February 4-6, and will include posters from all programs listed above under Conference Papers. Poster sessions are scheduled for the following times:
-            <li>
-                8:45 - 10:30 AM PST
-            </li>
-            <li>
-                4:45 - 6:30 PM PST
-            </li>
-            <li>
-                12:45 - 2:30 AM PST
-            </li>
-            Authors are encouraged to be available during two sessions each day.
-        </dd>
 
-        <dt>Sponsors/Exhibitors/Job Fair</dt>
-        <dd>
-            AAAI is grateful to all of its sponsors for their support of all aspects of the conference program. Please visit our sponsors and exhibitor booths during the following times, February 4-6:
-            <li>
-                10:00 - 12:30 AM PST
-            </li>
-            <li>
-                6:00 - 8:30 PM PST
-            </li>
-            <li>
-                2:00 - 4:30 AM PST
-            </li>
-            Be sure to attend the AAAI/ACM SIGAI Job Fair on Saturday, February 6 during the following hours.
-            <li>10:30 - 12:30 am PST</li>
-            <li>6:30 - 8:30 pm PST</li>
-            <li>2:30 - 4:30 am PST</li>
-        </dd>
 
         <dt>Chat</dt>
         <dd>
-            Chat with attendees using various RocketChat channels! When you access RocketChat for the first time, click on 'Login via AAAI2021 account' and your AAAI2021 credentials will be automatically used to log you in to RocketChat.
+            Chat with attendees using various RocketChat channels! When you access RocketChat for the first time, click on 'AAAI-2021 Login' and your AAAI2021 credentials will be automatically used to log you in to RocketChat.
         </dd>
 
         <dt>Help</dt>
