meet_with_a_fellow page

--- a/templates/base.html
+++ b/templates/base.html
@@ -212,8 +212,8 @@
                    <a class="dropdown-item" href="diversity_programs.html">
                       Diversity Programs
                     </a>
-                    <a class="dropdown-item" href="gathers.html">
-                      Gather with a Fellow
+                    <a class="dropdown-item" href="meet_with_a_fellow.html">
+                      Meet with a Fellow
                     </a>
                     <a class="dropdown-item" href="awards.html">
                       AAAI Organization Awards
