--- a/templates/workshop.html
+++ b/templates/workshop.html
@@ -62,7 +62,7 @@
     {{ components.live_sessions(
         workshop.blocks,
         workshop.title,
-        "https://virtual.acl2020.org/workshop_" + workshop.id + ".html",
+        "https://virtual.2021.aaai.org/workshop_" + workshop.id + ".html",
         false) }}
 
   </div>
