--- a/templates/undergraduate_consortium.html
+++ b/templates/undergraduate_consortium.html
@@ -65,7 +65,7 @@
         {% if event.session_name == "Talk: Roles for Computing in Social Justice" %}
             <tr>
             <td>
-              {{event.day}}, <span class="session_times">{{event.time_string}}</span>
+              {{"Feb 2"}}, <span class="session_times">{{event.time_string}}</span>
             </td>
           <td scope="row">{{event.session_name}}</td>
           <td style="white-space: pre-wrap;"><a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/rabebe.html">Dr. Rediet Abebe</a> (Faculty Panel Q&A)</td>
@@ -73,7 +73,7 @@
         {% elif event.session_name == "Talk: Wanted: You and Your Mind" %}
             <tr>
             <td>
-              {{event.day}}, <span class="session_times">{{event.time_string}}</span>
+              {{"Feb 2"}}, <span class="session_times">{{event.time_string}}</span>
             </td>
           <td scope="row">{{event.session_name}}</td>
           <td style="white-space: pre-wrap;"><a href="http://www.cs.utep.edu/agates/">Dr. Ann Gates</a> (Faculty Panel Q&A)</td>
@@ -81,7 +81,7 @@
         {% else %}
         <tr>
             <td>
-              {{event.day}}, <span class="session_times">{{event.time_string}}</span>
+              {{"Feb 2"}}, <span class="session_times">{{event.time_string}}</span>
             </td>
           <td scope="row">{{event.session_name}}</td>
           <td style="white-space: pre-wrap;">{{event.hosts}}</td>
