--- a/templates/components.html
+++ b/templates/components.html
@@ -800,6 +800,80 @@
 </script>
 {%- endmacro %}
 
+{% macro poster_info(date1,time1,date2,time2,room,cluster,position,cluster_name, is_plenary) -%}
+  <div class="text-center text-muted text-monospace">
+  <div class="paper-session-times">
+    <span class="session_times">{{date1}} {{time1}} / {{date2}} {{time2}}</span>
+
+  <a href=""   class="card-link" target="_blank">
+      [Join Gather Meeting]
+  </a>
+
+  <!--
+  {% if is_plenary %}
+    <a href="livestream.html"   class="card-link">
+    [Livestream]
+    </a>
+  {% endif %}
+  -->
+  </div>
+  <div class="paper-session-times">
+      <span>Room: {{ room }}, Cluster: {{ cluster }}, Position: {{ position }}, Cluster Name: {{ cluster_name }}</span>
+  </div>
+  </div>
+{#  <div class="text-center text-muted text-monospace">#}
+{#  <div class="paper-cal-links">#}
+{#  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">#}
+{#  <span id="session-cal-link-1"></span>#}
+{#  </div>#}
+{#  </div>#}
+
+{#<script src="static/js/add-to-calendar.js"></script>#}
+{#<script>#}
+
+{#  let ouicalData;#}
+{#  let targetNode;#}
+{#  let calendarNodeInner;#}
+{#  let calendarNodeSpan;#}
+{#  let parser = new DOMParser();#}
+{#  let calendarNames = Array("google", "off365", "outlook", "ical");#}
+
+{#  {% for session in sessions %}#}
+{#    // create a calendar by hand#}
+{#    ouicalData = addToCalendarData({#}
+{#      options: {#}
+{#        class: 'my-class',#}
+{#        id: 'my-id'#}
+{#      },#}
+{#      data: {#}
+{#        title: '{{ title }}'.replace("#", " "),#}
+{#        start: new Date("{{session.start_time_string}}"),#}
+{#        end: new Date("{{session.end_time_string}}"),#}
+{#        timezone: 'UTC',#}
+{#        {% if session.link %}#}
+{#        address: '{{session.link}}',#}
+{#        {% endif %}#}
+{#        description: '{{ url }}'#}
+{#      }#}
+{#    });#}
+{##}
+{#    targetNode = document.querySelector('#session-cal-link-1');#}
+{#    for (const name of calendarNames) {#}
+{#      calendarNodeInner = parser.parseFromString(ouicalData[name], "text/html");#}
+{#      calendarNodeSpan = document.createElement("span");#}
+{#      calendarNodeSpan.setAttribute("style", "padding: 2px");#}
+{#      calendarNodeSpan.appendChild(document.createTextNode("["));#}
+{#      calendarNodeSpan.appendChild(calendarNodeInner.getElementsByTagName("a")[0]);#}
+{#      calendarNodeSpan.appendChild(document.createTextNode("]"));#}
+{#      targetNode.appendChild(calendarNodeSpan);#}
+{#    }#}
+{#  {% endfor %}#}
+</script>
+{%- endmacro %}
+
+
+
+
 {% macro calendar_scripts() -%}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar/main.css"  crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar/main.min.js" crossorigin="anonymous"></script>
