update paper.html's calendar

--- a/templates/main_aisi_smt.html
+++ b/templates/main_aisi_smt.html
@@ -61,7 +61,7 @@ Conference-wide poster sessions will be held February 4-7, and will include post
                             </li>
                             {% endfor %}
                         </ul>
-                            <a class="btn btn-info btn-sm" href="{{ config.gather_town }}" role="button" target="_blank">Join on Gather</a>
+                            <a class="btn btn-info btn-sm" href="{{ config.gather_town }}" role="button" target="_blank">Join the Poster Session</a>
                     </div>
 
                 </div>
