--- a/templates/paper.html
+++ b/templates/paper.html
@@ -151,14 +151,7 @@
     </p>
 
     {{ components.poster_info(
-        paper.content.date1,
-        paper.content.time1,
-        paper.content.date2,
-        paper.content.time2,
-        paper.content.room,
-        paper.content.cluster,
-        paper.content.position,
-        paper.content.cluster_name,
+        paper,
         false) }}
 
         <p class="card-text text-center h5 pt-2">
