--- a/templates/components.html
+++ b/templates/components.html
@@ -1054,13 +1054,13 @@
 </script>
 {%- endmacro %}
 
-{% macro poster_info(date1,time1,date2,time2,room,cluster,position,cluster_name, is_plenary) -%}
+{% macro poster_info(paper, is_plenary) -%}
   <div class="text-center text-muted text-monospace">
   <div class="paper-session-times">
-    <span class="session_times">{{date1}} {{time1}} / {{date2}} {{time2}}</span>
+{#    <span class="session_times">{{paper.content.date1}} {{paper.content.time1}} PST/ {{paper.content.date2}} {{paper.content.time2}} PST</span>#}
 
   <a href=""   class="card-link" target="_blank">
-      [Join Gather Meeting]
+      [Join the Poster Session]
   </a>
 
   <!--
@@ -1072,56 +1072,90 @@
   -->
   </div>
   <div class="paper-session-times">
-      <span>Room: {{ room }}, Cluster: {{ cluster }}, Position: {{ position }}, Cluster Name: {{ cluster_name }}</span>
+      <span>Room: {{ paper.content.room }}, Cluster: {{ paper.content.cluster }}, Position: {{ paper.content.position }}, Cluster Name: {{ paper.content.cluster_name }}</span>
   </div>
   </div>
-{#  <div class="text-center text-muted text-monospace">#}
-{#  <div class="paper-cal-links">#}
-{#  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">#}
-{#  <span id="session-cal-link-1"></span>#}
-{#  </div>#}
-{#  </div>#}
+  <div class="text-center text-muted text-monospace">
+  <div class="paper-cal-links">
+  <span class="session_times">{{paper.content.date1}} {{paper.content.time1}} PST</span>
+  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
+  <span id="session-cal-link-1"></span>
+  </div>
+    <div class="text-center text-muted text-monospace">
+  <div class="paper-cal-links">
+  <span class="session_times">{{paper.content.date2}} {{paper.content.time2}} PST</span>
+  <img src="static/images/calendar.svg" class="paper-detail-calendar" height="24px">
+  <span id="session-cal-link-2"></span>
+  </div>
 
-{#<script src="static/js/add-to-calendar.js"></script>#}
-{#<script>#}
+  </div>
 
-{#  let ouicalData;#}
-{#  let targetNode;#}
-{#  let calendarNodeInner;#}
-{#  let calendarNodeSpan;#}
-{#  let parser = new DOMParser();#}
-{#  let calendarNames = Array("google", "off365", "outlook", "ical");#}
+<script src="static/js/add-to-calendar.js"></script>
+<script>
 
-{#  {% for session in sessions %}#}
-{#    // create a calendar by hand#}
-{#    ouicalData = addToCalendarData({#}
-{#      options: {#}
-{#        class: 'my-class',#}
-{#        id: 'my-id'#}
-{#      },#}
-{#      data: {#}
-{#        title: '{{ title }}'.replace("#", " "),#}
-{#        start: new Date("{{session.start_time_string}}"),#}
-{#        end: new Date("{{session.end_time_string}}"),#}
-{#        timezone: 'UTC',#}
-{#        {% if session.link %}#}
-{#        address: '{{session.link}}',#}
-{#        {% endif %}#}
-{#        description: '{{ url }}'#}
-{#      }#}
-{#    });#}
-{##}
-{#    targetNode = document.querySelector('#session-cal-link-1');#}
-{#    for (const name of calendarNames) {#}
-{#      calendarNodeInner = parser.parseFromString(ouicalData[name], "text/html");#}
-{#      calendarNodeSpan = document.createElement("span");#}
-{#      calendarNodeSpan.setAttribute("style", "padding: 2px");#}
-{#      calendarNodeSpan.appendChild(document.createTextNode("["));#}
-{#      calendarNodeSpan.appendChild(calendarNodeInner.getElementsByTagName("a")[0]);#}
-{#      calendarNodeSpan.appendChild(document.createTextNode("]"));#}
-{#      targetNode.appendChild(calendarNodeSpan);#}
-{#    }#}
-{#  {% endfor %}#}
+  let ouicalData;
+  let targetNode;
+  let calendarNodeInner;
+  let calendarNodeSpan;
+  let parser = new DOMParser();
+  let calendarNames = Array("google", "off365", "outlook", "ical");
+
+// create a calendar by hand
+paper_date1 = addToCalendarData({
+  options: {
+    class: 'my-class',
+    id: 'my-id'
+  },
+  data: {
+    title: '{{ paper.content.title }}'.replace("#", " "),
+    start: new Date("{{paper.date1_start_time_string}}"),
+    end: new Date("{{paper.date1_end_time_string}}"),
+    timezone: 'UTC',
+    address: '{{paper.content.gather_town_link}}',
+    description: '{{ paper.content.gather_town_link }}'
+  }
+});
+
+targetNode = document.querySelector('#session-cal-link-1');
+for (const name of calendarNames) {
+  calendarNodeInner = parser.parseFromString(paper_date1[name], "text/html");
+  calendarNodeSpan = document.createElement("span");
+  calendarNodeSpan.setAttribute("style", "padding: 2px");
+  calendarNodeSpan.appendChild(document.createTextNode("["));
+  calendarNodeSpan.appendChild(calendarNodeInner.getElementsByTagName("a")[0]);
+  calendarNodeSpan.appendChild(document.createTextNode("]"));
+  targetNode.appendChild(calendarNodeSpan);
+}
+
+
+// create a calendar by hand
+paper_date2 = addToCalendarData({
+  options: {
+    class: 'my-class',
+    id: 'my-id'
+  },
+  data: {
+    title: '{{ paper.content.title }}'.replace("#", " "),
+    start: new Date("{{paper.date1_start_time_string}}"),
+    end: new Date("{{paper.date1_end_time_string}}"),
+    timezone: 'UTC',
+    address: '{{paper.content.gather_town_link}}',
+    description: '{{ paper.content.gather_town_link }}'
+  }
+});
+
+targetNode = document.querySelector('#session-cal-link-2');
+for (const name of calendarNames) {
+  calendarNodeInner = parser.parseFromString(paper_date2[name], "text/html");
+  calendarNodeSpan = document.createElement("span");
+  calendarNodeSpan.setAttribute("style", "padding: 2px");
+  calendarNodeSpan.appendChild(document.createTextNode("["));
+  calendarNodeSpan.appendChild(calendarNodeInner.getElementsByTagName("a")[0]);
+  calendarNodeSpan.appendChild(document.createTextNode("]"));
+  targetNode.appendChild(calendarNodeSpan);
+}
+
+
 </script>
 {%- endmacro %}
 
